bess_app/infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bess-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - bess.elektron.re
    secretName: bess-tls
  rules:
  - host: bess.elektron.re
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: bess-backend
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bess-frontend
            port:
              number: 80
